fixed margin on buttons to work on mobile

--- a/src/css/gridbutton.css
+++ b/src/css/gridbutton.css
@@ -2,3 +2,7 @@
   outline: none;
   box-shadow: none;
 }
+
+.gb {
+  margin: 0.4em;
+}
